# 1INF32

cap01 backtracking/KnightsTour_dev/: KnigthsTour.cpp  main.cpp
cap01 backtracking/KnightsTour_vac/: CMakeLists.txt  KnigthsTour.cpp  KnigthsTour.h  main.cpp
cap01 backtracking/NReinas_dev/: CMakeLists.txt  NReinas.cpp  NReinas.h  main.cpp
cap01 backtracking/NReinas_vac/: NReinas.cpp
cap01 backtracking/NReinas_vaz/: main.cpp
cap01 backtracking/SearchWord/: CMakeLists.txt
cap01 backtracking/Sudoku/: CMakeLists.txt  Sudoku.cpp  Sudoku.h  main.cpp
cap01 backtracking/WordSearch_dev/: WordSearch.cpp  WordSearch.h
cap01 backtracking/WordSearch_vac/: CMakeLists.txt  WordSearch.cpp
cap01 backtracking/WordSearch_vaz/: main.cpp
cap02 programación_dinamica/CoinRow_dev/: CoinRow.cpp  CoinRow.h  main.cpp
cap02 programación_dinamica/CoinRow_vac/: CMakeLists.txt  CoinRow.cpp
cap02 programación_dinamica/Hangover_dev/: CMakeLists.txt  Hangover.cpp  Hangover.h  main.cpp
cap02 programación_dinamica/Hangover_vac/: Hangover.cpp
cap02 programación_dinamica/Knapsack_vac/: CMakeLists.txt  Knapsack.cpp  Knapsack.h  main.cpp
cap02 programación_dinamica/LIS_dev/: CMakeLists.txt  LIS.cpp  LIS.h
cap02 programación_dinamica/LIS_vac/: LIS.cpp  main.cpp
cap03 heurísticas (Greedy)/ActivitySelection_Dev/: ActivitySelection.cpp
cap03 heurísticas (Greedy)/ActivitySelection_Vac/: ActivitySelection.cpp  ActivitySelection.h  CMakeLists.txt  main.cpp
cap04 meta-heurísticas (GRASP)/KnapsackVac/: Articulo.cpp  Articulo.h  CMakeLists.txt  Knapsack.cpp  main.cpp
(+39 files in other folders)
